# my-rag-project-0

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_schema.py
docs/: architecture.md
scripts/: start-milvus.sh
src/rag0/: __init__.py  __main__.py  caching.py  cli.py  config.py  container.py  exceptions.py  logging.py  telemetry.py  types.py
src/rag0/api/: app.py  deps.py  middleware.py
src/rag0/api/routes/: chat.py  health.py  knowledge.py
src/rag0/chains/: generation.py  indexing.py  retrieval.py
src/rag0/connectors/: database.py  embeddings.py  llm.py  registry.py  vector_store.py
src/rag0/indexing/: loaders.py  multi_vector.py  splitters.py
src/rag0/retrieval/: fusion.py  query_expansion.py  reranker.py  routing.py
tests/: conftest.py
tests/unit/: test_caching.py  test_config.py  test_fusion.py  test_generation.py  test_splitter.py
ui/: streamlit_app.py
