[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag0"
version = "0.1.0"
description = "A modern RAG (Retrieval-Augmented Generation) framework with hybrid search, async support, and clean architecture."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
keywords = ["rag", "retrieval-augmented-generation", "llm", "vector-search", "milvus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LLM
    "litellm>=1.40",
    # Embedding
    "sentence-transformers>=3.0",
    # Vector Store
    "pymilvus>=2.4,<3.0",
    # Sparse Retrieval
    "rank-bm25>=0.2",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Text Processing
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    # Configuration
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    # Structured Logging
    "structlog>=24.0",
    # API Server
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",
    # Document Processing
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "rapidocr-onnxruntime>=1.3",
    "wired-table-rec>=0.0.3",
    # Caching
    "diskcache>=5.6",
    # Async
    "httpx>=0.27",
]

[project.optional-dependencies]
server = [
    "streamlit>=1.32",
]
telemetry = [
    "langfuse>=2.31",
]
eval = [
    "ragas>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
rag0 = "rag0.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--strict-markers"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line-too-long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
